fix: select-input-list z-index

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -211,6 +211,7 @@ html {
     padding: 8px 16px;
     list-style: none;
     display: none;
+    z-index: 1;
 }
     
 .select-input__link {
